# cs61a

./: .gitignore  README.md  main.py  pyproject.toml
disc/: disc01.py  disc02.py  disc03.py  disc04.py  disc05.ipynb  disc05.py  disc06.py  disc07.py  disc08.py  disc10.scm
hw/hw01_sp25/: .ok_history  hw01.py
hw/hw01_su25/: .ok_history  .ok_storage.dir  hw01.py
hw/hw02/: .ok_history  hw02.py
hw/hw03/: .ok_history  .ok_storage.dir  hw03.py
hw/hw04/: .ok_history  hw04.py
hw/hw06/: .ok_context  .ok_history  hw06.py
lab/lab00/: .ok_storage.bak
lab/lab01_sp25/: .ok_history  lab01.py
lab/lab01_su25/: lab01.py
lab/lab02/: .ok_history  lab02.py
lab/lab03/: .ok_history  .ok_storage.dir  lab03.py
lab/lab04/: lab04.py
lab/lab05/: .ok_history  .ok_storage.dir  lab05.py
lab/lab06/: .ok_history  .ok_storage.bak  lab06.py
lab/lab07/: .ok_history  lab07.py
lab/lab08/: .ok_history  lab08.scm
lec/: get_golden_number.py  lec02.py  lec03.py  lec04.py  lec05.py  lec06.py  lec07.py  lec08.py  lec09.py  lec10.py  lec11.py  lec12.py  lec13.py  lec14.py  lec15.ipynb  lec15.py  lec16.ipynb  lec16.py  lec17.py  lec18.ipynb  lec18.py  lec19.py  lec20.py  lec21.py  lec22.py  lec23.py  lec24.py  lec25.py  lec27.py  lec30.scm  link.py  tree.py  ucb.py
lec/lec01/: lec01.ipynb
projects/ants/: .ok_history  .ok_storage  ants.py
projects/cats/: .ok_history  cats.py
projects/hog/: .ok_history  hog.py
